[package]
name = "html-sys"
version = "0.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mild-times/html-sys"
documentation = "https://docs.rs/html-sys"
description = "Generated HTML definitions from WebIDL"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]

[dev-dependencies]
